--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,8 +44,8 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
-    // Bluecats
-    implementation 'com.bluecats:bluecats-android-sdk:2.1.7'
+    // Kontakt
+    implementation group: 'io.kontakt.mvn', name: 'sdk', version: '7.1.0'
 
     //Retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
